fix width to not wrap, animate icons

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 .forecastday {
     width:15%;
-    margin-left: 40px;
+    margin-left: 35px;
     float:left;
 }
 .temp {
